# AILibrary

Soccer/: CMakeLists.txt
Soccer/data/: alphabeta_tr_15  go.sh  judge  simple_alphabeta_13  simple_alphabeta_6  simple_alphabeta_7  simple_alphabeta_8  simple_alphabeta_9
Soccer/src/: AI.cpp  AI.h  AlphaBeta.cpp  AlphaBeta.h  CMakeLists.txt  DangerousAlphaBeta.cpp  DangerousAlphaBeta.h  Player.cpp  Player.h  State.cpp  State.h  main.cpp
SquareSearch/: Makefile  SquareSearch.cpp  SquareSearch.h  main.cpp
